[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/TitleScreen/TitleScreenButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/Startup/Startup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/TitleScreen/TitleScreen.gd" type="Script" id=3]

[node name="TitleScreen" type="Control"]
anchor_left = -0.00168862
anchor_top = -0.003002
anchor_right = 0.998311
anchor_bottom = 0.996998
margin_left = 0.875977
margin_right = 0.875977
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Startup" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.623951
anchor_top = 0.225224
anchor_right = 0.970827
anchor_bottom = 0.469669
margin_left = 1.52588e-05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="NewGameButton" parent="VBoxContainer" instance=ExtResource( 1 )]
scene_to_load = "res://World.tscn"

[node name="Label" parent="VBoxContainer/NewGameButton" index="0"]
text = "New Game"

[node name="QuitButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 24.0
margin_bottom = 44.0
quit = true

[node name="Label" parent="VBoxContainer/QuitButton" index="0"]
text = "Quit"
[connection signal="startup_finished" from="Startup" to="." method="_on_Startup_startup_finished"]

[editable path="VBoxContainer/NewGameButton"]

[editable path="VBoxContainer/QuitButton"]
